Frontend consumes Accounts microservices

--- a/frontend/mybank/src/main/resources/messages/messages_en.properties
+++ b/frontend/mybank/src/main/resources/messages/messages_en.properties
@@ -1,4 +1,5 @@
 layout.application.menu.sideMenu.label.home=Home
 layout.application.menu.sideMenu.label.accounts=Accounts
 layout.application.menu.sideMenu.label.loans=Loans
+layout.application.menu.sideMenu.label.payments=Payments
 
