--- a/frontend/mybank/src/main/resources/messages/messages_es.properties
+++ b/frontend/mybank/src/main/resources/messages/messages_es.properties
@@ -1,3 +1,4 @@
 layout.application.menu.sideMenu.label.home=Inicio
 layout.application.menu.sideMenu.label.accounts=Cuentas
 layout.application.menu.sideMenu.label.loans=Préstamos
+layout.application.menu.sideMenu.label.payments=Pagos
